# pqc

./: CMakeLists.txt  README.md
examples/: main.cpp  main_bike.cpp  main_cm.cpp  main_hqc.cpp
include/: pqc.h  pqc.hpp
include/Modules/Bike_RandomFixedWeight/: Bike_RandomFixedWeight.hpp
include/Modules/CM_Encoder/: CM_Encoder.hpp
include/Modules/Comparator/: Comparator.hpp
include/Modules/HQC_RandomFixedWeight/: HQC_RandomFixedWeight.hpp
include/Modules/SyndComparator/: SyndComparator.hpp
include/Tools/: codes.hpp
include/Tools/Bike/: Bike_public_key.hpp  Bike_secret_key.hpp
include/Tools/ClassicMcEliece/: CM_keygen.hpp
include/Tools/HQC/: HQC_public_key.hpp
src/: main.cpp  main_bike.cpp  main_cm.cpp  main_hqc.cpp
src/Modules/Bike_Decoder/: Bike_Decoder.cpp
src/Modules/Bike_Encoder/: Bike_Encoder.cpp
src/Modules/Bike_RandomFixedWeight/: Bike_RandomFixedWeight.cpp
src/Modules/CM_Decoder/: CM_Decoder.cpp
src/Modules/CM_Encoder/: CM_Encoder.cpp
src/Modules/CM_RandomFixedWeight/: CM_RandomFixedWeight.cpp
src/Modules/Comparator/: Comparator.cpp
src/Modules/HQC_Decoder/: HQC_Decoder.cpp
src/Modules/HQC_Encoder/: HQC_Encoder.cpp
src/Modules/HQC_RandomFixedWeight/: HQC_RandomFixedWeight.cpp
src/Modules/RandomFixedWeight/: RandomFixedWeight.cpp
src/Modules/RandomVector/: RandomVector.cpp
src/Modules/SyndComparator/: SyndComparator.cpp
src/Tools/: codes.cpp  tools.cpp
src/Tools/Bike/: Bike_keygen.cpp  Bike_public_key.cpp  Bike_secret_key.cpp
src/Tools/ClassicMcEliece/: CM_keygen.cpp  CM_public_key.cpp  CM_secret_key.cpp
src/Tools/HQC/: HQC_keygen.cpp  HQC_public_key.cpp  HQC_secret_key.cpp
src/common/Comparator/: Comparator.cpp
src/common/Modules/Bike_Decoder/: Bike_Decoder.cpp  Bike_Decoder.hpp
src/common/Modules/Bike_Encoder/: Bike_Encoder.cpp  Bike_Encoder.hpp
src/common/Modules/Bike_RandomFixedWeight/: Bike_RandomFixedWeight.cpp  Bike_RandomFixedWeight.hpp
src/common/Modules/CM_Decoder/: CM_Decoder.cpp  CM_Decoder.hpp
src/common/Modules/CM_Encoder/: CM_Encoder.cpp  CM_Encoder.hpp
src/common/Modules/CM_RandomFixedWeight/: CM_RandomFixedWeight.cpp  CM_RandomFixedWeight.hpp
src/common/Modules/Comparator/: Comparator.cpp  Comparator.hpp
src/common/Modules/HQC_Decoder/: HQC_Decoder.cpp  HQC_Decoder.hpp
src/common/Modules/HQC_Encoder/: HQC_Encoder.cpp  HQC_Encoder.hpp
src/common/Modules/HQC_RandomFixedWeight/: HQC_RandomFixedWeight.cpp  HQC_RandomFixedWeight.hpp
src/common/Modules/RandomFixedWeight/: RandomFixedWeight.cpp  RandomFixedWeight.hpp
src/common/Modules/RandomVector/: RandomVector.cpp  RandomVector.hpp
src/common/Modules/SyndComparator/: SyndComparator.cpp  SyndComparator.hpp
src/common/RandomFixedWeight/: RandomFixedWeight.cpp  RandomFixedWeight.hpp
src/common/Tools/: Bike_public_key.cpp  Bike_public_key.hpp  Bike_secret_key.cpp  Bike_secret_key.hpp  CM_public_key.cpp  CM_public_key.hpp  CM_secret_key.cpp  CM_secret_key.hpp  codes.cpp  codes.hpp  tools.cpp  tools.hpp
src/common/Tools/Bike/: Bike_keygen.cpp  Bike_keygen.hpp  Bike_public_key.cpp  Bike_public_key.hpp  Bike_secret_key.cpp
src/common/Tools/ClassicMcEliece/: CM_keygen.cpp  CM_public_key.cpp  CM_public_key.hpp  CM_secret_key.cpp  CM_secret_key.hpp
src/common/Tools/HQC/: HQC_keygen.cpp  HQC_keygen.hpp  HQC_public_key.cpp  HQC_public_key.hpp  HQC_secret_key.cpp  HQC_secret_key.hpp
